# libcold

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  editable_layout.txt
buildscripts/: linux-setupenv.sh  requirements.txt  windows-setupenv.cmd
buildscripts/conan-profiles/: x86_64-Windows-clang-Debug  x86_64-Windows-clang-Release  x86_64-Windows-v142-Debug  x86_64-Windows-v142-Release  x86_64-linux-v142-Debug
buildscripts/linux/: setenv.sh
buildscripts/windows/: env_msvc2019.cmd  findvc.cmd  pkg_configure_and_build.cmd  setup-llvm.cmd  setupenv.cmd
cmake/: autogroup.cmake  findLIBCXX.cmake
cmake/CryptoPP/lib/cmake/CryptoPP/: CryptoPPConfig.cmake
cmake/libuv/lib/cmake/libuv/: LibUvConfig.cmake  LibuvConfig.cmake
extras/Visualizers/: libcxx.natvis
src/remoting/: CMakeLists.txt  httpparser.cpp  pch.h  websocket.cpp
src/remoting/include/cold/remoting/: httpparser.h  websocket.h
src/runtime/: CMakeLists.txt  pch.h
src/runtime/async/: asyncfunctions.cpp  coretaskimpl.cpp  coretaskimpl.h  scheduler.cpp
src/runtime/diagnostics/: diagbackend.cpp  diagbackend.h  loginternal.cpp  loginternal.h  runtimecheckinternal.cpp  runtimecheckinternal.h
src/runtime/include/cold/async/: asynctimer.h  scheduler.h  task.h  taskbasetypes.h
src/runtime/include/cold/async/core/: coretask.h  coretasklinkedlist.h  schedulerguard.h
src/runtime/include/cold/com/: comclass.h  comptr.h  comutils.h  ianything.h  interface.h  refcounted.h  weakcomptr.h
src/runtime/include/cold/compiler/: coroutine.h
src/runtime/include/cold/diagnostics/: backend.h  diaginternal.h  exception.h  exceptionguard.h  logging.h  runtimecheck.h  sourceinfo.h
src/runtime/include/cold/io/: asyncreader.h  asyncwriter.h  reader.h  writer.h
src/runtime/include/cold/memory/: allocator.h  bytesbuffer.h  membase.h  pageallocator.h  rtstack.h
src/runtime/include/cold/meta/: attribute.h  classinfo.h  concepts.h  functioninfo.h
src/runtime/include/cold/network/: client.h  networkexception.h  networkexport.h  server.h  socketcontrol.h  stream.h  websocketcontrol.h
src/runtime/include/cold/network/utils/: tcptablesnapshot.h
src/runtime/include/cold/remoting/: socketaddress.h
src/runtime/include/cold/runtime/: disposableruntimeguard.h  runtime.h  runtimeexport.h
src/runtime/include/cold/runtime/internal/: runtimeallocator.h  runtimecomponent.h  runtimeinternal.h  uvutils.h
src/runtime/include/cold/serialization/: json.h  jsonruntimevalue.h  jsonserialization.h  msgpackserialization.h  runtimevalue.h  runtimevaluebuilder.h  serialization.h  valuerepresentation.h
src/runtime/include/cold/serialization/valuerepresentation/: arrayrepresentation.h  dictionaryrepresentation.h  objectrepresentation.h  optionalrepresentation.h  primitiverepresentation.h  representationbase.h  stdtypesrepresentation.h  tuplerepresentation.h
src/runtime/include/cold/threading/: barrier.h  critical_section.h  event.h  lock.h  lockable.h  setthreadname.h
src/runtime/include/cold/utils/: asyncdisposable.h  cancellationtoken.h  disposable.h  format.h  formatters.h  functor.h  intrusivelist.h  nothing.h  preprocessor.h  proxy.h  result.h  scopeguard.h  strfmt.h  stringconv.h  strings.h  tostring.h  tupleutility.h  typelist.h  typeutility.h  uid.h
src/runtime/include/cold/utils/typelist/: append.h  concat.h  contains.h  distinct.h  filter.h  iterate.h  transform.h  typelist.h
src/runtime/memory/: allocator.cpp  bytesbuffer.cpp  fixedsizepoolallocator.cpp  rtstack.cpp
src/runtime/network/: networkutility.cpp  networkutility.h  pipe.cpp  tcp.cpp  transport.cpp  transport.h  uvserver.cpp  uvserver.h  uvstream.cpp  uvstream.h
src/runtime/network/utils/: tcptablesnapshot.win.cpp
src/runtime/network/websocket/: websocketclient.cpp  websocketserver.cpp  websocketstream.cpp  websocketstream.h  websockettransport.cpp
src/runtime/platform/Windows/: stringconv-windows.cpp
src/runtime/remoting/: httpparser.cpp  socketaddress.cpp  websocket.cpp
src/runtime/runtime/: componentids.h  disposableruntimeguard.cpp  runtimecomponent.cpp  runtimedefaultscheduler.cpp  runtimeimpl.cpp  runtimepoolscheduler.cpp  runtimescheduler.cpp  runtimescheduler.h  timermanager.cpp  uvutils.cpp
src/runtime/serialization/: json.cpp  jsonprimitive.h  jsonserialization.cpp  msgpackserialization.cpp  runtimevalue.cpp
src/runtime/threading/: barrier.cpp  event.cpp  setthreadname.cpp
src/runtime/utils/: cancellationtoken.cpp  format.cpp  strfmt.cpp  strings.cpp  uid-win.cpp
tests/: CMakeLists.txt
tests/test-runtime/: CMakeLists.txt  pch.h  test_allocator.cpp  test_attribute.cpp  test_buffers.cpp  test_cancellationtoken.cpp  test_classinfo.cpp  test_com.cpp  test_format.cpp  test_functor.cpp  test_intrusivelist.cpp  test_membase.cpp  test_refcounted.cpp  test_result.cpp  test_runtime.cpp  test_runtimevalue.cpp  test_samples.cpp  test_scopeguard.cpp  test_serialization.cpp  test_strings.cpp  test_typelist.cpp  test_uid.cpp  test_utils.cpp  test_valuerepresentation.cpp
tests/test-runtime/test-async/: test_task.cpp  test_timers.cpp
tests/test-runtime/test-network/: test_client.cpp  test_httpparser.cpp  test_server.cpp  test_socketaddress.cpp  test_stream.cpp  test_websocket.cpp  testnetworkbase.cpp  testnetworkbase.h
tests/testcommonlib/: CMakeLists.txt
tests/testcommonlib/include/: buffertestutils.h  runtimescopeguard.h  stopwatch.h
tests/testcommonlib/src/: buffertestutils.cpp  pch.h  runtimescopeguard.cpp  stopwatch.cpp
tests/tests-runtime/: CMakeLists.txt
